# mplppt

./: .bumpversion.cfg  .gitignore  LICENSE  README.ipynb  README.md  __init__.py  __main__.py  convert.py  example.ipynb  line.xml  ppt.py  rect.xml  save.py  setup.cfg  setup.py  shape.xml  test.py  testing.ipynb
convert/: __init__.py
mplppt/: __init__.py  __main__.py  convert.py  new.py  save.py
mplppt/shapes/: __init__.py  base.py  canvas.py  image.py  line.py  polygon.py  rectangle.py  spine.py  text.py
mplppt/templates/: __init__.py  text.xml
mplppt/templates/pptx/: [Content_Types].xml
mplppt/templates/pptx/ppt/: presProps.xml
mplppt/templates/pptx/ppt/slideLayouts/: slideLayout6.xml  slideLayout7.xml
mplppt/templates/pptx/ppt/slides/: slide1.xml
mplppt/utils/: __init__.py  colors.py  constants.py  contextmanagers.py  mpl.py  strings.py
ppt/: __init__.py
shapes/: __init__.py  base.py  canvas.py  image.py  line.py  polygon.py  ppt.py  rectangle.py  spine.py  text.py
templates/: __init__.py  image.xml  line.xml  rect.xml  rectangle.xml  shape.xml
templates/empty/docProps/: core.xml
templates/empty/ppt/: viewProps.xml
templates/empty/ppt/_rels/: presentation.xml.rels
templates/empty/ppt/slideLayouts/: slideLayout10.xml  slideLayout2.xml  slideLayout3.xml  slideLayout5.xml  slideLayout8.xml
templates/empty/ppt/slides/: slide1.xml
templates/pptx/ppt/: presentation.xml  revisionInfo.xml
templates/pptx/ppt/media/: media.txt
templates/pptx/ppt/slideLayouts/: slideLayout1.xml  slideLayout11.xml  slideLayout4.xml  slideLayout9.xml
templates/pptx/ppt/slideMasters/: slideMaster1.xml
templates/pptx/ppt/slides/_rels/: slide1.xml.rels
templates/pptx/ppt/theme/: theme1.xml
test/: [Content_Types].xml
test/docProps/: app.xml  core.xml
test/ppt/: presentation.xml  viewProps.xml
test/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout11.xml  slideLayout2.xml  slideLayout3.xml  slideLayout4.xml  slideLayout5.xml  slideLayout6.xml  slideLayout7.xml  slideLayout8.xml  slideLayout9.xml
test/ppt/slideMasters/: slideMaster1.xml
test/ppt/slides/: slide1.xml
utils/: __init__.py  colors.py  contextmanagers.py  string.py  strings.py
