[metadata]
name = mplppt
version = 0.0.3
description = Convert a matplotlib figure to a powerpoint slide
author = Floris Laporte
author_email = floris.laporte@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/flaport/mplppt
license = MIT
license_file = LICENSE
classifiers =
  Development Status :: 3 - Alpha
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 2.7
  License :: OSI Approved :: MIT License

[options]
packages =
  find:
include_package_data = true
install_requires =
  matplotlib
  numpy
  scipy

[options.package_data]
* = *.xml, *.rels, *.jpeg, *.media, **/*.xml, **/*.rels, **/*.jpeg, **/*.media, **/**/*.xml, **/**/*.rels, **/**/*.jpeg, **/**/*.media, **/**/**/*.xml, **/**/**/*.rels, **/**/**/*.jpeg, **/**/**/*.media, **/**/**/**/*.xml, **/**/**/**/*.rels, **/**/**/**/*.jpeg, **/**/**/**/*.media
