[metadata]
name = mplppt
version = 0.0.5
description = Convert a matplotlib figure to a powerpoint slide
author = Floris Laporte
author_email = floris.laporte@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/flaport/mplppt
license = MIT
license_file = LICENSE
classifiers =
  Development Status :: 3 - Alpha
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 2.7
  License :: OSI Approved :: MIT License

[options]
packages =
  find:
include_package_data = true
install_requires =
  matplotlib
  numpy
  scipy

[options.package_data]
* =
  *.xml
  *.rels
  *.jpeg
  templates/pptx/docProps/app.xml
  templates/pptx/docProps/core.xml
  templates/pptx/docProps/thumbnail.jpeg
  templates/pptx/ppt/media/.media
  templates/pptx/ppt/presentation.xml
  templates/pptx/ppt/presProps.xml
  templates/pptx/ppt/revisionInfo.xml
  templates/pptx/ppt/slideLayouts/slideLayout1.xml
  templates/pptx/ppt/slideLayouts/slideLayout10.xml
  templates/pptx/ppt/slideLayouts/slideLayout11.xml
  templates/pptx/ppt/slideLayouts/slideLayout2.xml
  templates/pptx/ppt/slideLayouts/slideLayout3.xml
  templates/pptx/ppt/slideLayouts/slideLayout4.xml
  templates/pptx/ppt/slideLayouts/slideLayout5.xml
  templates/pptx/ppt/slideLayouts/slideLayout6.xml
  templates/pptx/ppt/slideLayouts/slideLayout7.xml
  templates/pptx/ppt/slideLayouts/slideLayout8.xml
  templates/pptx/ppt/slideLayouts/slideLayout9.xml
  templates/pptx/ppt/slideLayouts/_rels/slideLayout1.xml.rels
  templates/pptx/ppt/slideLayouts/_rels/slideLayout10.xml.rels
  templates/pptx/ppt/slideLayouts/_rels/slideLayout11.xml.rels
  templates/pptx/ppt/slideLayouts/_rels/slideLayout2.xml.rels
  templates/pptx/ppt/slideLayouts/_rels/slideLayout3.xml.rels
  templates/pptx/ppt/slideLayouts/_rels/slideLayout4.xml.rels
  templates/pptx/ppt/slideLayouts/_rels/slideLayout5.xml.rels
  templates/pptx/ppt/slideLayouts/_rels/slideLayout6.xml.rels
  templates/pptx/ppt/slideLayouts/_rels/slideLayout7.xml.rels
  templates/pptx/ppt/slideLayouts/_rels/slideLayout8.xml.rels
  templates/pptx/ppt/slideLayouts/_rels/slideLayout9.xml.rels
  templates/pptx/ppt/slideMasters/slideMaster1.xml
  templates/pptx/ppt/slideMasters/_rels/slideMaster1.xml.rels
  templates/pptx/ppt/slides/slide1.xml
  templates/pptx/ppt/slides/_rels/slide1.xml.rels
  templates/pptx/ppt/tableStyles.xml
  templates/pptx/ppt/theme/theme1.xml
  templates/pptx/ppt/viewProps.xml
  templates/pptx/ppt/_rels/presentation.xml.rels
  templates/pptx/*.xml
  templates/pptx/_rels/.rels
